Fix overlap of animations

--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ h3 {
     }
 
     100% {
-        transform: translateX(50%);
+        transform: translateX(45%);
     }
 }
 
@@ -471,6 +471,7 @@ footer h2 {
         }
                 
         .griditemf {
+                   
                     grid-column: 2 / 3;
         }
 }
